styles/mockup/mockup.css
/* ... */
.project-sass-icon {
  color: #c76494;
}

.project-js-icon {
  color: #f0db4f;
}

.project-links {
  justify-content: center;
  gap: 20px;
  margin: 0 0 10px;
}

.live-link,
.source-code,
.view-more {
  padding: 8px 8px;
  text-align: center;
}

.live-link,
.source-code {
  width: 100px;
  border: 3px solid #785af0;
}

.live-link-button,
.source-code-button {
  color: #fafafa;
}

.live-link-button:hover,
.source-code-button:hover {
  color: #2cb67d;
}

.view-more-btn-container {
  margin-bottom: 15px;
}

.view-more {
  width: 220px;
  border: 4px solid #785af0;
  margin-inline: auto;
  background-color: #1a1a1a;
  -webkit-box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.35);
  -moz-box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.35);
  box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.35);
}

.view-more-btn {
  display: inline-block;
  position: relative;
  color: #2cb67d;
  font-size: 1.3rem;
  transition: 0.5s;
}

.view-more-btn:after {
  content: "»";
  position: absolute;
  opacity: 0;
  top: -6px;
  left: 191px;
  font-size: 1.75rem;
  transition: 0.5s;
}

.view-more-btn:hover {
  padding-right: 24px;
  padding-left: 8px;
}

.view-more-btn:hover:after {
  opacity: 1;
  right: 10px;
}

#projects-top-divider,
#projects-bottom-divider {
  position: relative;
  height: auto;
  min-height: 165px;
  margin-top: -1px;
}

#projects-bottom-divider {
  transform: rotate(180deg);
}

.separator {
  position: absolute;
  top: 0;
}

.separator-bottom {
  position: absolute;
  bottom: 0;
}

/* ------------------------------------
---------------------------------------
PROJECTS PAGE
---------------------------------------
------------------------------------ */

.projects-page-top {
  height: 60px;
  background-color: #fafafa;
}

.projects-list--project-page {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 40px;
  margin-bottom: 100px;
}

.contact-section--projects-page {
  padding-top: 50px;
}

/* ------------------------------------
---------------------------------------
CONTACT SECTION
---------------------------------------
------------------------------------ */

#contact-section {
  padding-bottom: 125px;
}

.contact-heading-span {
  position: relative;
  z-index: 1;
  font-size: 1.28rem;
}

.contact-heading-span::after {
  content: "";
  position: absolute;
  z-index: -1;
  bottom: -2px;
  left: 19px;
  width: 220px;
  height: 9px;
  background-color: #785af0;
}

/* ------------------------------------
CONTACT FORM
------------------------------------ */
.contact-form {
  max-width: 475px;
  margin-inline: auto;
}

.form-fieldset {
  border: 0;
}

.form-fieldset legend {
  text-align: center;
}

.lets-connect,
.contact-text {
  margin: 0;
}

.lets-connect {
  font-size: 1rem;
}

.contact-text {
  padding: 6px 0 4px;
  padding-bottom: 4px;
  font-size: 0.85rem;
  color: #fafafa;
}

.fa-arrow-right {
  padding-left: 1px;
  color: #785af0;
  font-size: 0.85rem;
}

/* ------------------------------------
COPY EMAIL ADDRESS TO CLIPBOARD 
------------------------------------ */
/* Hide the desktop button */
#email-copy {
  position: relative;
  display: none;
}

.click-to-copy,
.click-to-copy-fallback {
  padding: 0;
  color: #2cb67d;
}

button.click-to-copy,
a.click-to-copy-fallback {
  border: 0;
  background-color: #1a1a1a;
}

button.click-to-copy:hover {
  cursor: pointer;
  opacity: 0.8;
}

/* We make the span hidden by default. In this case, using display: none; isn't an issue from an accessibility standpoint, since we don't want screen readers to pick this up unless the user clicks on the button */
.copied.hidden {
  display: none;
}

.copied {
  position: absolute;
  top: -16px;
  right: -56px;
  margin-left: 1rem;
  padding: 0.5rem;
  border-radius: 0.2rem;
  background: transparent;
  color: #785af0;
  font-size: 13px;
  text-transform: uppercase;
  letter-spacing: 0.4px;
  font-weight: 500;
  transform: rotate(29deg);
}

/* Fallback version for mobile, where the native email apps are way more used and mailto: link becomes way more relevant. */
#email-copy-fallback {
  display: inline;
}

.form-item {
  padding-left: 7px;
  border: 0;
  border-radius: 0px;
  margin-bottom: 6px;
  color: #fafafa;
  background-color: #272727;
  caret-color: #2cb67d;
}

.main-nav-link:focus,
.form-item:focus,
.form-button:focus {
  outline: 2px solid #785af0;
  opacity: 0.7;
}

.view-resume:focus,
.projects-cta:focus,
.live-link-button:focus,
.source-code-button:focus,
.return-home-link:focus,
.footer-icon-container:focus {
  outline: 2px solid #2cb67d;
}

.form-item-one,
.form-item-two {
  height: 35px;
}

.form-item-three {
  padding-top: 10px;
  resize: none;
}

.submit-container {
  padding: 0 0.85em;
  text-align: end;
}

.form-button {
  position: relative;
  z-index: 1;
  width: 93px;
  height: 35px;
  padding-top: 6px;
  border: 0;
  border-bottom: 3px solid #785af0;
  font-size: 0.85rem;
  letter-spacing: 2.25px;
  text-transform: uppercase;
  color: #fafafa;
  background-color: #1a1a1a;
}

.form-button::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  transform: scaleY(0);
  transform-origin: bottom center;
  transition: transform 0.3s;
  background: #785af0;
}

.form-button:hover::after {
  transform: scaleY(1);
}

.form-button:hover {
  font-size: 0.9rem;
  font-weight: 500;
  letter-spacing: 1.5px;
  color: #000;
  cursor: pointer;
}

/* ------------------------------------
---------------------------------------
FOOTER SECTION
---------------------------------------
------------------------------------ */

#footer-section {
  position: relative;
  height: 135px;
  padding-top: 25px;
  font-size: 0.75rem;
  background-color: #272727;
}

.return-home {
  position: absolute;
  top: -20px;
  width: 40px;
  height: 40px;
  margin-inline: auto;
  background-color: #785af0;
}

.return-home:hover {
  background-color: #2cb67d;
  transform: scale(1.1);
}

.return-home-link {
  width: 40px;
  height: 40px;
}
/* ... */

